[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "incident-py-q"
version = "0.1.0"
description = "Contract-driven Python SDK for the Incident IQ API."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "Incident IQ SDK Maintainers" }]
dependencies = [
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
  "jsonschema>=4.22.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.14",
  "Typing :: Typed",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
  "respx>=0.21.0",
  "ruff>=0.6.0",
  "mypy>=1.10.0",
  "pdoc>=15.0.0",
  "mkdocs-material>=9.7.5",
]

[project.urls]
Homepage = "https://github.com/example/incident-py-q"
Documentation = "https://example.github.io/incident-py-q/"
Repository = "https://github.com/example/incident-py-q"
Changelog = "https://github.com/example/incident-py-q/blob/main/CHANGELOG.md"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
incident_py_q = [
  "py.typed",
  "data/**/*.json",
  "data/**/*.md",
  "data/**/*.yml",
  "data/**/*.yaml",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
markers = [
  "integration: marks tests that call live Incident IQ services",
]
filterwarnings = [
  "ignore:jsonschema.RefResolver is deprecated:DeprecationWarning",
]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "C4", "SIM", "N", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["incident_py_q"]

[tool.mypy]
python_version = "3.14"
mypy_path = "src"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
strict_equality = true
no_implicit_optional = true
show_error_codes = true
packages = ["incident_py_q"]

[[tool.mypy.overrides]]
module = ["jsonschema", "jsonschema.*"]
ignore_missing_imports = true
